--- a/contact.css
+++ b/contact.css
@@ -10,3 +10,24 @@ html {
 .contact_form_google {
     width: 100%;
 }
+
+/* Googleフォームをレスポンシブできれいに見せる */
+@media screen and (max-width: 900px) {
+    .container {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        padding-top: 150%;
+    }
+
+    .responsive_iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+    }
+}
