--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ html {
     font-style: normal;
 }
 
+html {
+    background-color: #f2f7ff;
+}
+
 h2 {
     font-size: 1rem;
 }
@@ -51,14 +55,19 @@ h2 {
 
 .top__contents_item {
     list-style: none;
-    width: 25%;
+    width: 29.3%;
+    margin: 2%;
 }
 
 .top__contents_item img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
+    box-shadow: 0px 4px 9px -3px #d9dfe9;
+    border-radius: 8px;
 }
+
+@media screen and (max-width: 900px) {}
 
 
 
